src/objects/RT1__AutoMeetingImportNotification__c.object
<CustomObject>
    <fields>
        <fullName>RT1__AccessCode__c</fullName>
        <label>Access Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__CreateNewLeads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create New Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RT1__LeadAssignmentBehavior__c</fullName>
        <label>Lead Assignment Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assign to self</fullName>
                    <default>true</default>
                    <label>Assign to self</label>
                </value>
                <value>
                    <fullName>Assign to another user</fullName>
                </value>
                <value>
                    <fullName>Use lead assignment rule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RT1__LeadAssignmentRuleId__c</fullName>
        <label>Lead Assignment Rule Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__LeadOwnerId__c</fullName>
        <label>Lead Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__LeadSource__c</fullName>
        <label>Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RT1__Passcode__c</fullName>
        <label>Passcode</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__TollFreeNumber__c</fullName>
        <label>Toll Free Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>AutoMeetingImportNotification</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>AutoMeetingImportNotification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AutoMeetingImportNotifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>